--- a/OsmAndJavaCore/.gitignore
+++ b/OsmAndJavaCore/.gitignore
@@ -2,13 +2,8 @@
 /*.suo
 /*.sdf
 /*.opensdf
+/*.user
+/*.filters
 
 # Visual Studio output directories
-/*/bin
-/*/obj
 /*/
-!/.nuget/
-!/OsmAnd/
-!/OsmAndNativeComponent/
-!/OsmAndJavaCore/
-!/Avian/
